Added new directory structuring and fixed up debuging

--- a/sim.html
+++ b/sim.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<div id="content">
-			<img class="centimg" src="logo.png" alt=""/>
+			<img class="centimg" src="res/logo.png" alt=""/>
 			<div id="navbar">
 				<a class="navelt" href="index.html">Home</a>
 				<div class="navelt drop"> Classes 
