--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<div id="content">
-			<img class="centimg" src="logo.png" alt=""/>
+			<img class="centimg" src="res/logo.png" alt=""/>
 			<div id="navbar">
 				<a class="navelt" href="">Home</a>
 				<div class="navelt drop"> Classes 
